<resources>
    <string name="app_name">Pemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="account">Tài khoản</string>
    <string name="saved">Đã lưu</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="price">Giá: </string>
    <string name="title_activity_maps">Map</string>
    <string name="first_slide_title">Tìm Kiếm Đơn Giản</string>
    <string name="second_slide_title">Lọc Tin Dễ Dàng </string>
    <string name="third_slide_title">Tích Hợp Chỉ Đường</string>
    <string name="fourth_slide_title">Thông Tin Chi Tiết</string>
    <string name="first_slide_desc">Tìm kiếm phòng trọ quanh khu vực với mức giá phù hợp</string>
    <string name="second_slide_desc">Hỗ trợ lọc tin theo loại phòng, giá phòng, diện tích</string>
    <string name="third_slide_desc">Tích hợp Googles Map chỉ đường giúp thuận tiện đi lại</string>
    <string name="fourth_slide_desc">Hiển thị đầy đủ thông tin hình ảnh và điện thoại liên hệ trực tiếp</string>
    <string name="skip_btn">Bỏ qua</string>
    <string name="next_btn">Tiếp</string>
    <string name="getStarts_btn">Bắt đầu</string>
    <string name="new_post">Bài mới đăng</string>
    <string name="address">Địa chỉ: </string>
    <string name="save_post">Bài đã lưu</string>
    <string name="name_home">Tên trọ</string>
    <string name="comment_text">Đánh giá của bạn</string>
    <string name="hint_add_comment">Add comment</string>
    <string name="add_comment">Đánh giá</string>
    <string name="btn_delete">Xóa</string>
    <string name="btn_update">Cập Nhật</string>
    <string name="create_date">Ngày đăng: </string>
    <string name="tv_detail">Mô tả chi tiết</string>
    <string name="tv_map">Bản đồ</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_apply">Áp dụng</string>
    <string name="tv_forgot_password">Quên mật khẩu ?</string>
    <string name="hint_username">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="tv_have_account">Bạn đã có tài khoản ?</string>
    <string name="tv_new_user">Đăng ký ngay?</string>
    <string name="btn_navigation">Chỉ đường</string>


    <string name="confirm_mess">Yêu cầu đăng nhập</string>
    <string name="mess_in_confirm">Bạn phải đăng nhập để sử dụng tính năng này</string>
    <string name="btn_cancel_dialog">Huỷ bỏ</string>
    <string name="btn_login_dialog">Đăng nhập</string>
    <string name="none_rate">Chưa có xếp hạng</string>
    <string name="logo_name">PEMO HOME</string>

    <string name="update_mess_faiil">Không có gì thay đổi</string>
    <string name="update_mess_sucess">Cập nhật thành công</string>

</resources>